Comming soon Page

--- a/index.html
+++ b/index.html
@@ -8,12 +8,9 @@
 </head>
 <link rel="stylesheet" href="./style.css">
 <body>
-    <h1>Welcome</h1>
-
-    <ul>
-        <li class="items">1</li>
-        <li class="items">2</li>
-        <li class="items">3</li>
-    </ul>
+    <div class="container">
+        <h1>Comming soon</h1>
+    </div>
+    
 </body>
 </html>
