Comming soon Page

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <link rel="stylesheet" href="./style.css">
 <body>
     <div class="container">
-        <h1>Comming soon</h1>
+        <h1>Coming soon</h1>
     </div>
     
 </body>
